--- a/src/components/StartEndNode/styles.scss
+++ b/src/components/StartEndNode/styles.scss
@@ -1,4 +1,3 @@
-@import "~Styles/variables";
 @import "~Styles/mixins";
 
 .bx--modal-footer .bx--btn:last-child:first-child {
@@ -59,7 +58,7 @@
       top: 1.25rem;
       border-bottom-right-radius: 50%;
       border-top-right-radius: 50%;
-      background-image: url("../../assets/icons/chevron_white.svg");
+      background-image: url("~Assets/icons/chevron_white.svg");
       background-position: center;
       background-repeat: no-repeat;
     }
@@ -70,7 +69,7 @@
       border-top-left-radius: 50%;
       left: -2rem;
       top: 1.25rem;
-      background-image: url("../../assets/icons/chevron.svg");
+      background-image: url("~Assets/icons/chevron.svg");
       background-position: center;
       background-repeat: no-repeat;
     }
