--- a/src/components/TextEditorModal/TextEditorView/styles.scss
+++ b/src/components/TextEditorModal/TextEditorView/styles.scss
@@ -17,7 +17,7 @@
   left: 0;
   right: 0;
   width: 15rem;
-  background-color: #ffffff;
+  background-color: var(--cds-ui-01) fff;
   max-height: 8.75rem;
   overflow-y: auto;
   z-index: 9098;
