--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,6 +1,6 @@
 .container {
   align-items: flex-start;
-  background: white;
+  background: var(--cds-ui-01);
   display: flex;
   flex-direction: column;
   padding: 1rem 2rem 2rem;
