--- a/src/components/NavigateBack/navigateBack.module.scss
+++ b/src/components/NavigateBack/navigateBack.module.scss
@@ -1,5 +1,3 @@
-@import "~Styles/variables";
-
 .container {
   display: flex;
   align-items: flex-end;
@@ -11,7 +9,7 @@
 }
 
 .text {
-  color: black;
+  color: var(--cds-text-01);
   font-size: 1rem;
   font-weight: 500;
   letter-spacing: 0.0625rem;
