--- a/src/components/NotificationBanner/styles.scss
+++ b/src/components/NotificationBanner/styles.scss
@@ -1,5 +1,3 @@
-@import "~@boomerang/boomerang-styles/lib/colors";
-
 .b-notification-banner {
   position: fixed;
   z-index: 99;
@@ -7,14 +5,14 @@
   align-items: flex-start;
   justify-content: space-between;
   width: 100vw;
-  background-color: $cerulean-50;
+  background-color: var(--cds-interactive-01);
   padding: 1rem 3rem 1rem 1rem;
   transition: transform 1.5 ease;
   top: 3rem;
 }
 
 .b-notification-banner__text {
-  color: $white;
+  color: var(--cds-ui-01);
   font-size: 1rem;
   font-weight: 300;
   letter-spacing: 0.03125rem;
@@ -23,7 +21,7 @@
   width: calc(100% - 2rem);
 
   a {
-    color: $teal-10;
+    color: var(--flow-lightest-teal);
   }
 }
 
@@ -36,7 +34,7 @@
 }
 
 .b-notification-banner__close-icon {
-  fill: $white;
+  fill: var(--cds-ui-01);
   height: 1.5rem;
   width: 1.5rem;
 }
