--- a/src/components/TaskLinkDesigner/TaskLink.module.scss
+++ b/src/components/TaskLinkDesigner/TaskLink.module.scss
@@ -1,5 +1,3 @@
-@import "~Styles/variables";
-
 .path {
   stroke: var(--cds-interactive-01);
   &.locked {
@@ -20,13 +18,13 @@
 
   &.completed {
     path {
-      fill: #009d9a;
+      fill: var(--cds-support-02);
     }
   }
 
   &.failure {
     path {
-      fill: #a51920;
+      fill: var(--flow-failure);
     }
   }
 
