--- a/src/components/TemplateTaskNodeExecution/TemplateTaskNodeExecution.module.scss
+++ b/src/components/TemplateTaskNodeExecution/TemplateTaskNodeExecution.module.scss
@@ -1,4 +1,3 @@
-@import "~Styles/variables";
 @import "~Styles/mixins";
 
 :global .c-workflow-diagram-execution {
@@ -8,8 +7,8 @@
 }
 
 .failure {
-  border: 0.1875rem solid #a51920;
-  border-color: #a51920 !important;
+  border: 0.1875rem solid var(--flow-failure);
+  border-color: var(--flow-failure) !important;
 }
 
 .inProgress {
@@ -51,8 +50,8 @@
 }
 
 .completed {
-  border: 0.1875rem solid #009d9a;
-  border-color: #009d9a !important;
+  border: 0.1875rem solid var(--cds-support-02);
+  border-color: var(--cds-support-02) !important;
 }
 
 .notstarted,
