--- a/src/features/Activity/ActivityHeader/ActivityHeaderWidtget/activityHeaderWidget.module.scss
+++ b/src/features/Activity/ActivityHeader/ActivityHeaderWidtget/activityHeaderWidget.module.scss
@@ -1,5 +1,3 @@
-@import "~@boomerang/boomerang-styles/lib/colors";
-
 .container {
   align-items: center;
   display: flex;
@@ -12,14 +10,14 @@
 }
 
 .value {
-  color: $gray-60;
+  color: var(--cds-text-02);
   font-size: 2rem;
   font-weight: 600;
   line-height: 2.625rem;
 }
 
 .text {
-  color: $gray-90;
+  color: var(--cds-text-01);
   font-size: 0.875rem;
   font-weight: 300;
   line-height: 1.125rem;
