--- a/src/features/Editor/Designer/Tasks/tasks.module.scss
+++ b/src/features/Editor/Designer/Tasks/tasks.module.scss
@@ -1,10 +1,8 @@
-@import "~@boomerang/boomerang-styles/lib/colors";
 @import "~Styles/animation";
 @import "~Styles/mixins";
-@import "~Styles/variables";
 
 .container {
-  background-color: $white;
+  background-color: var(--cds-ui-01);
   display: flex;
   flex-direction: column;
   position: relative;
@@ -43,7 +41,7 @@
   }
 
   .heading {
-    color: $darkest-gray;
+    color: var(--cds-text-01);
     font-size: 1.125rem;
     font-weight: 300;
     line-height: 1.4375rem;
