--- a/src/features/Execution/Main/ExecutionTaskLog/executionTaskLog.module.scss
+++ b/src/features/Execution/Main/ExecutionTaskLog/executionTaskLog.module.scss
@@ -1,4 +1,3 @@
-@import "~@boomerang/boomerang-styles/lib/colors";
 @import "~Styles/animation";
 @import "~Styles/mixins";
 
@@ -32,7 +31,7 @@
 }
 
 .statusBlock {
-  color: #242a2e;
+  color: var(--cds-text-01);
   display: flex;
   height: 7rem;
   overflow: hidden;
@@ -91,7 +90,7 @@
   width: 2rem;
 
   path {
-    fill: #242a2e;
+    fill: var(--cds-text-01);
   }
 }
 
@@ -115,7 +114,7 @@
   width: 1rem;
 
   path {
-    fill: #242a2e;
+    fill: var(--cds-text-01);
   }
 }
 
@@ -136,7 +135,7 @@
 }
 
 .taskbarTitle {
-  color: $gray-90;
+  color: var(--cds-text-01);
   font-size: 1rem;
   line-height: 1.25rem;
   white-space: nowrap;
