--- a/src/features/Execution/Main/main.module.scss
+++ b/src/features/Execution/Main/main.module.scss
@@ -1,5 +1,3 @@
-@import "~Styles/variables";
-
 .container {
   background-color: var(--cds-ui-background) !important;
   height: 100%;
@@ -23,6 +21,7 @@
 
 .diagram {
   margin-top: 3.5rem;
+  padding: 1rem;
 }
 
 .diagramLoading {
