--- a/src/features/Insights/CustomLegend/customLegend.module.scss
+++ b/src/features/Insights/CustomLegend/customLegend.module.scss
@@ -1,5 +1,3 @@
-@import "~Styles/variables";
-
 .container {
   display: flex;
   justify-content: center;
@@ -17,7 +15,7 @@
   background-color: transparent;
   width: 1.875rem;
   height: 1rem;
-  color: $dark-gray;
+  color: var(--cds-text-01);
 }
 .label {
   font-size: 0.875rem;
