--- a/src/features/Workflows/CreateWorkflow/CreateWorkflowContent/createWorkflow.module.scss
+++ b/src/features/Workflows/CreateWorkflow/CreateWorkflowContent/createWorkflow.module.scss
@@ -1,6 +1,3 @@
-@import "~@boomerang/boomerang-styles/lib/colors";
-@import "~Styles/variables";
-
 .formBody {
   display: block;
   margin: auto;
@@ -31,7 +28,7 @@
   }
 }
 .iconsTitle {
-  color: $gray-90;
+  color: var(--cds-text-01);
   letter-spacing: 0.0625rem;
   margin-bottom: 0.5rem;
   margin-top: 1rem;
@@ -79,7 +76,7 @@
   &.--active {
     background: var(--cds-support-02);
     svg {
-      fill: $white;
+      fill: var(--cds-ui-01);
     }
     &:hover {
       background: var(--cds-support-02);
