--- a/src/features/Workflows/WorkflowsHeader/workflowsHeader.module.scss
+++ b/src/features/Workflows/WorkflowsHeader/workflowsHeader.module.scss
@@ -1,5 +1,3 @@
-@import "~Styles/variables";
-
 .header {
   position: sticky;
   top: 0;
@@ -7,7 +5,7 @@
 }
 
 .container {
-  background: white;
+  background: var(--cds-ui-01);
   display: flex;
   justify-content: space-between;
   height: 4.3125rem;
