--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,6 +1,6 @@
 body {
   background-color: var(--cds-ui-background);
-  color: #272727;
+  color: var(--cds-text-01);
   line-height: 1.3;
   letter-spacing: 0.0375rem;
 }
@@ -14,7 +14,7 @@ button {
 }
 
 a {
-  color: $cerulean-50;
+  text-decoration: none;
 }
 
 /* fix for carbon menu */
@@ -25,7 +25,7 @@ a {
 #app {
   //overwrite carbon components
   .bx--list-box__label {
-    color: $black;
+    color: var(--cds-text-01);
     font-weight: 400;
   }
 }
