--- a/src/styles/_carbon-components.scss
+++ b/src/styles/_carbon-components.scss
@@ -1,5 +1,5 @@
 // Carbon settings
-@import "~@boomerang/carbon-addons-boomerang-react/styles/scss/styles/themes/_boomerang.scss";
+@import "~@boomerang/carbon-addons-boomerang-react/styles/scss/styles/themes/boomerang";
 $carbon--theme: $carbon--theme--boomerang;
 $carbon-addons-bmrg--theme: boomerang;
 
@@ -24,9 +24,13 @@ $carbon-addons-bmrg--theme: boomerang;
 
 // Global overrides
 .bx--list-box__menu-icon > svg {
-  fill: black;
+  fill: var(--cds-text-01);
 }
 
 .bx--date-picker__calendar {
   padding: 0rem;
+}
+
+:root {
+  --cds-font-family: "IBM Plex Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
