--- a/src/Styles/_carbon-components.scss
+++ b/src/Styles/_carbon-components.scss
@@ -22,6 +22,7 @@ $carbon-addons-bmrg--theme: boomerang;
 @import "~carbon-components/scss/components/structured-list/structured-list";
 @import "~carbon-components/scss/components/tabs/tabs";
 @import "~carbon-components/scss/components/skeleton/skeleton";
+@import "~carbon-components/scss/components/ui-shell/header";
 
 // Global overrides
 .bx--list-box__menu-icon > svg {
