--- a/src/Features/App/app.module.scss
+++ b/src/Features/App/app.module.scss
@@ -15,3 +15,11 @@
     height: 3rem !important;
   }
 }
+
+.appActivationContainer {
+  height: 100vh;
+  width: 100vw;
+  background: url(../../Assets/svg/mono_skyline.svg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+}
