--- a/src/Features/Workflows/workflowHome.module.scss
+++ b/src/Features/Workflows/workflowHome.module.scss
@@ -41,3 +41,24 @@
   flex-wrap: wrap;
   margin-left: -0.75rem;
 }
+
+.quotaModalContainer {
+  height: 49.25rem;
+  max-height: 49.25rem;
+  width: 37.5rem;
+}
+
+.teamQuotaContainer {
+  display: flex;
+  align-items: baseline;
+}
+
+.quotaDescriptionContainer {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+.warningIcon {
+  margin-left: 0.5rem;
+}
