--- a/src/Styles/_carbon-components.scss
+++ b/src/Styles/_carbon-components.scss
@@ -24,6 +24,8 @@ $carbon-addons-bmrg--theme: boomerang;
 @import "~carbon-components/scss/components/skeleton/skeleton";
 @import "~carbon-components/scss/components/ui-shell/header";
 
+@import "~carbon-components/scss/components/number-input/number-input";
+
 // Global overrides
 .bx--list-box__menu-icon > svg {
   fill: var(--cds-text-01);
