--- a/src/Styles/_carbon-components.scss
+++ b/src/Styles/_carbon-components.scss
@@ -21,6 +21,7 @@ $carbon-addons-bmrg--theme: boomerang;
 @import "~carbon-components/scss/components/select/select";
 @import "~carbon-components/scss/components/structured-list/structured-list";
 @import "~carbon-components/scss/components/tabs/tabs";
+@import "~carbon-components/scss/components/tooltip/tooltip";
 @import "~carbon-components/scss/components/skeleton/skeleton";
 @import "~carbon-components/scss/components/ui-shell/header";
 
