--- a/src/Features/TaskTemplates/Sidenav/sideInfo.module.scss
+++ b/src/Features/TaskTemplates/Sidenav/sideInfo.module.scss
@@ -137,15 +137,14 @@
   height: 3rem;
   padding: 0 1rem;
   width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
   &.active {
     background-color: var(--cds-selected-ui);
     border-left-color: var(--cds-support-02);
     svg {
       fill: initial;
     }
-  }
-  svg {
-    fill: var(--cds-text-02);
   }
 }
 .taskName {
@@ -163,5 +162,22 @@
     height: 1rem;
     margin-right: 0.5rem;
     width: 1rem;
+  }
+}
+
+.iconContainer {
+  display: flex;
+  flex-direction: row;
+
+  svg {
+    margin-left: 0.5rem !important;
+  }
+}
+
+.taskInfoContainer {
+  display: flex;
+  flex-direction: row;
+  svg {
+    fill: var(--cds-text-02);
   }
 }
