--- a/src/Features/Workflows/workflowHome.module.scss
+++ b/src/Features/Workflows/workflowHome.module.scss
@@ -37,9 +37,11 @@
 }
 
 .workflows {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -0.75rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 19.375rem);
+  column-gap: 1.5rem;
+  row-gap: 1rem;
+  margin-top: 1rem;
 }
 
 .quotaModalContainer {
