--- a/src/Features/Workflows/workflowHome.module.scss
+++ b/src/Features/Workflows/workflowHome.module.scss
@@ -45,9 +45,8 @@
 }
 
 .quotaModalContainer {
-  height: 49.25rem;
-  max-height: 49.25rem;
-  width: 37.5rem;
+  max-height: 44rem;
+  max-width: 37.5rem;
 }
 
 .teamQuotaContainer {
