fix: remove team members from team quotas

--- a/src/Features/Quotas/Header/Header.module.scss
+++ b/src/Features/Quotas/Header/Header.module.scss
@@ -33,17 +33,11 @@
   width: 100%;
 }
 
-.teamMembers {
-  color: #4d5358;
-  font-size: 0.875rem;
-  letter-spacing: 0.01rem;
-  line-height: 1.125rem;
-  margin-top: 1rem;
-}
 .teamName {
   font-size: 1.5rem;
   letter-spacing: 0;
   line-height: 2rem;
+  margin: 0;
 }
 
 .info {
