--- a/src/Features/Quotas/Header/Header.module.scss
+++ b/src/Features/Quotas/Header/Header.module.scss
@@ -73,3 +73,40 @@
   margin-bottom: 0.5rem;
   margin-top: 0.75rem;
 }
+
+.modalContainer {
+  height: 25.625rem;
+  width: 30rem;
+}
+
+.detailedTitle {
+  font-size: 0.75rem;
+  letter-spacing: 0.02rem;
+  line-height: 0.9375rem;
+  margin-bottom: 0.5rem;
+}
+
+.detailedData {
+  font-size: 0.875rem;
+  letter-spacing: 0.01rem;
+  line-height: 1.125rem;
+}
+
+.gridContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 11.875rem);
+  column-gap: 1.5rem;
+  row-gap: 3.75rem;
+}
+
+.divider {
+  height: 0.0625rem;
+  width: 28rem;
+  background-color: var(--cds-active-ui);
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+.modalBodyContainer {
+  padding-top: 0rem;
+}
