--- a/src/Features/Activity/ActivityHeader/activityHeader.module.scss
+++ b/src/Features/Activity/ActivityHeader/activityHeader.module.scss
@@ -1,30 +1,18 @@
 .container {
-  background-color: var(--cds-ui-01);
-  display: flex;
-  height: 4.3125rem;
-  justify-content: space-between;
-  width: 100%;
-}
+  h1 {
+    margin: 0;
+  }
 
-.subtitle {
-  color: var(--cds-text-01);
-  font-size: 1.25rem;
-  font-weight: 300;
-  line-height: 1.5625rem;
-}
-
-.title {
-  color: var(--cds-text-01);
-  font-size: 2rem;
-  font-weight: 600;
-  line-height: 2.625rem;
-  margin: 0;
+  h2 {
+    font-size: 1.25rem;
+    font-weight: 300;
+  }
 }
 
 .content {
   align-items: center;
   display: flex;
-  margin: 2rem 2.125rem 1.5625rem 0;
+  margin: 0.5rem 2.125rem 1.5625rem 0;
 }
 
 .text {
