--- a/src/Features/Editor/Header/header.module.scss
+++ b/src/Features/Editor/Header/header.module.scss
@@ -1,71 +1,9 @@
 @import "Styles/mixins";
 
 .container {
-  display: flex;
-  flex-direction: column;
-  height: 9rem;
-  justify-content: space-between;
-  padding-bottom: 0rem !important;
-  position: sticky;
-  top: 0;
-  z-index: 3;
-}
-
-.header {
-  width: 100%;
-}
-
-.titleContainer {
-  align-items: center;
-  display: flex;
-
-  svg {
-    fill: var(--cds-support-03) !important;
+  h1 {
+    margin: 0;
   }
-}
-.title {
-  color: var(--cds-text-01);
-  font-size: 2rem;
-  font-weight: 600;
-  line-height: 2.625rem;
-  margin: 0rem;
-  margin-right: 0.5rem;
-  max-width: 50rem;
-}
-
-.breadcrumbContainer {
-  align-items: flex-start;
-  display: flex;
-  margin-bottom: -1rem;
-  height: 2.5rem;
-}
-
-.workflowsLink {
-  font-size: 0.875rem;
-  letter-spacing: 0.01rem;
-  line-height: 1.125rem;
-
-  &:focus {
-    @include focus-outline();
-  }
-}
-
-.breadcrumbDivider {
-  font-size: 0.875rem;
-  letter-spacing: 00.01rem;
-  line-height: 1.125rem;
-  margin: 0 0.5rem;
-}
-
-.workflowName {
-  color: var(--cds-text-01);
-  font-size: 0.875rem;
-  letter-spacing: 00.01rem;
-  line-height: 1.125rem;
-}
-
-.validateButton {
-  margin-left: auto;
 }
 
 .workflowButtons {
