--- a/src/Features/Settings/settings.module.scss
+++ b/src/Features/Settings/settings.module.scss
@@ -1,3 +1,9 @@
+.header {
+  h1 {
+    margin: 0;
+  }
+}
+
 .container {
   width: 100vw;
   overflow-y: auto;
@@ -48,7 +54,7 @@
     width: 100%;
   }
 
-  > * + *  {
+  > * + * {
     margin-top: 1rem;
   }
 
