--- a/src/Features/TaskTemplates/Sidenav/sideInfo.module.scss
+++ b/src/Features/TaskTemplates/Sidenav/sideInfo.module.scss
@@ -1,33 +1,10 @@
 @import "Styles/mixins";
 
 .container {
-  background-color: var(--cds-ui-01);
-  border-right: 0.0625rem solid var(--cds-active-ui);
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - 3rem);
-  // padding: 2rem 1rem;
   min-width: 21.875rem;
-  width: 20rem;
-  :global .bx--accordion {
-    overflow-y: auto;
-  }
-  :global .bx--accordion__content {
-    padding: 0 !important;
-  }
-  :global(.bx--accordion__item) {
-    list-style-type: none;
-    :global(.bx--accordion__arrow) {
-      position: absolute;
-      right: 1.5rem;
-    }
-    :global(.bx--accordion__title) {
-      color: var(--cds-text-01);
-      font-size: 0.875rem;
-      letter-spacing: 0.01rem;
-      line-height: 1.25rem;
-      text-transform: capitalize;
-    }
+
+  :global .bx--bmrg-feature-sidenav-link-content {
+    width: 100%;
   }
 }
 .tools {
@@ -82,16 +59,6 @@
   padding: 0.5rem;
   width: 100%;
 }
-.tasksContainer {
-  display: flex;
-  flex-direction: column;
-  min-height: 10rem;
-}
-.info {
-  display: flex;
-  flex-direction: column;
-  margin: 0.75rem 1rem;
-}
 .title {
   font-size: 2rem;
   font-weight: 600;
@@ -118,6 +85,8 @@
 }
 .info {
   color: var(--cds-text-02);
+  display: flex;
+  flex-direction: column;
   font-size: 0.75rem;
   margin: 1rem;
 }
@@ -131,32 +100,16 @@
 }
 .task {
   align-items: center;
-  border-left: transparent 0.25rem solid;
-  cursor: pointer;
   display: flex;
   height: 3rem;
-  padding: 0 1rem;
   width: 100%;
-  flex-direction: row;
   justify-content: space-between;
-  &.active {
-    background-color: var(--cds-selected-ui);
-    border-left-color: var(--cds-support-02);
-    svg {
-      fill: initial;
-    }
+
+  svg {
+    fill: #0072c3;
   }
 }
-.taskName {
-  color: var(--cds-text-02);
-  font-size: 0.875rem;
-  margin-left: 0.5rem;
-  max-width: 16rem;
-  @include text-overflow-ellipsis();
-  &.active {
-    color: var(--cds-text-01);
-  }
-}
+
 .checkboxOption {
   align-items: center;
   display: flex;
@@ -173,14 +126,5 @@
 
   svg {
     margin-left: 0.5rem !important;
-  }
-}
-
-.taskInfoContainer {
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  svg {
-    fill: var(--cds-text-02);
   }
 }
