--- a/src/Features/TeamDetailed/Header/Header.module.scss
+++ b/src/Features/TeamDetailed/Header/Header.module.scss
@@ -1,63 +1,11 @@
 @import "~Styles/mixins";
 
 .container {
-  display: flex;
-  flex-direction: column;
-  height: 10.5rem;
-  justify-content: space-between;
-  padding-bottom: 0rem !important;
-  position: sticky;
-  top: 0;
-  z-index: 10;
-}
-
-.header {
-  width: 100%;
-}
-
-.headerTitle {
-  align-items: baseline;
-  display: flex;
-  margin-bottom: 0.5rem;
-}
-
-.title {
-  font-size: 2rem;
-  font-weight: 600;
-  line-height: 2.625rem;
-  max-width: 50rem;
-  margin: 0rem 1rem 0rem 0rem;
-}
-
-.breadcrumbContainer {
-  align-items: flex-start;
-  display: flex;
-  margin-bottom: -1rem;
-  height: 2.5rem;
-}
-
-.teamsLink {
-  color: var(--cds-interactive-01);
-  font-size: 0.875rem;
-  letter-spacing: 00.01rem;
-  line-height: 1.125rem;
-  &:focus {
-    @include focus-outline();
+  h1 {
+    margin: 0 0 0.5rem 0;
   }
 }
 
-.breadcrumbDivider {
-  font-size: 0.875rem;
-  letter-spacing: 00.01rem;
-  line-height: 1.125rem;
-  margin: 0 0.5rem;
-}
-
-.teamName {
-  font-size: 0.875rem;
-  letter-spacing: 00.01rem;
-  line-height: 1.125rem;
-}
 .teamButtons {
   align-items: center;
   bottom: 1.5rem;
@@ -81,9 +29,5 @@
   margin: 0 1rem;
 }
 .statusText {
-  font-size: 1rem;
-}
-.dateText {
-  display: flex;
   font-size: 1rem;
 }
