--- a/src/Features/TeamProperties/TeamPropertiesTable/teamPropertiesTable.module.scss
+++ b/src/Features/TeamProperties/TeamPropertiesTable/teamPropertiesTable.module.scss
@@ -1,8 +1,16 @@
+.header {
+  padding: 1rem 2rem 0;
+}
+
+.headerTitle {
+  margin: 0;
+}
+
 .tableContainer {
   margin: 2.5rem 2.5rem 4.5rem 2.5rem;
 }
 
-.header {
+.tableHeader {
   display: flex;
   justify-content: space-between;
   margin: 1.5rem 0;
@@ -47,8 +55,6 @@
 }
 
 .tableCell {
-
-
   .tableSecured {
     height: 1.25rem;
     width: 1.25rem;
